Added exit button, reset whole game logic

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <textarea readonly name="historial" id="textarea-historial" cols="64" rows="6"></textarea>
         </div>
         <div class="slot-container">
-            <div class="button-div"><button class="btn" onclick="exit()">Salir</button></div>
+            <div class="button-div"><button class="btn" onclick="exit(monedas)">Salir</button></div>
         </div>
     </div>
 </body>
