Added change button, disabling spin if slots spinning already and disabling stop if the is no spinning going on

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>¡Tira para probar suerte!</h2>
         </div>
 
-        <div class="button-div"><button class="btn" onclick="spin()">Tirar</button></div>
+        <div class="button-div"><button class="btn" id="spin" onclick="spin()">Tirar</button></div>
         <div class="button-div"><button class="btn" id="coins" onclick="stop()">STOP!</button></div>
         <div class="titulos">
             <h2>Historial de jugadas</h2>
