Added sound button, img for the sound button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/styles/style.css">
     <script src="/scripts/tragaperras.js"></script>
+    <script src="/scripts/soundfx.js"></script>
 </head>
 
 <body>
@@ -32,7 +33,6 @@
         <div class="titulos">
             <h2>¡Tira para probar suerte!</h2>
         </div>
-
         <div class="button-div"><button class="btn" id="spin" onclick="spin()">Tirar</button></div>
         <div class="button-div"><button class="btn" id="coins" onclick="stop()">STOP!</button></div>
         <div class="titulos">
@@ -45,6 +45,8 @@
             <div class="button-div"><button class="btn" onclick="exit(monedas)">Salir</button></div>
         </div>
     </div>
+    <div id="speaker"><img src="/img/speaker-on.png" alt=""></div>
 </body>
+
 
 </html>
