--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <div class="button-div"><button class="btn" onclick="exit(monedas)">Salir</button></div>
         </div>
     </div>
-    <div id="speaker"><input type="image" onclick="playSound()" id="img-speaker" src="/img/speaker-on.png" alt="">
+    <div id="speaker"><input value="off" type="image" onclick="playSound()" id="img-speaker" src="/img/speaker-off.png"
+            alt="">
         <audio id="casino-audio" src="/audio/casino-pokemon.mp3"></audio>
     </div>
 </body>
