Fixed upper sound button, changes img when on/off, turns on and off on click

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <div class="button-div"><button class="btn" onclick="exit(monedas)">Salir</button></div>
         </div>
     </div>
-    <div id="speaker"><input value="off" type="image" onclick="playSound()" id="img-speaker" src="/img/speaker-off.png"
-            alt="">
+    <div id="speaker"><input value="off" type="image" id="img-speaker" onclick="soundSwitch()"
+            src="/img/speaker-off.png" alt="">
         <audio id="casino-audio" src="/audio/casino-pokemon.mp3"></audio>
+        <audio id="insert-sound" src="/audio/insert-coin.mp3"></audio>
     </div>
 </body>
-
 
 </html>
