Styled the buttons, playing around with the color palette

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             <div><img class="img-decor-left" src="/img/slot-machine.png" alt=""><img class="img-decor-right"
                     src="/img/slot-machine.png" alt="">
                 <div id="btn-insert"><button id="btn-1" class="slot-button"
-                        onclick="insertCoin(),soundInsertCoin()">Insertar
-                        Monedas</button></div>
+                        onclick="insertCoin(),soundInsertCoin()">Insert Coins: </button></div>
             </div>
             <div class="button-div"></div>
             <div class="titulos">
