Updated color palette, still deciding what to do about background color/img, next font style

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="insert-monedas">
-            <input value="undefined" type="number" id="input-coins" placeholder="Insert Coin">
+            <input value="undefined" type="number" min="0" maxlength="6" id="input-coins" placeholder="Insert Coin">
         </div>
         <div class=slot-container-1>
             <div class="img-frutas"><img id="slot-1" src="/img/Manzana.png" alt=""></div>
@@ -43,7 +43,7 @@
             <h2>Historial de jugadas</h2>
         </div>
         <div id="historial-jugadas">
-            <textarea readonly name="historial" id="textarea-historial" cols="62" rows="5"></textarea>
+            <textarea readonly name="historial" id="textarea-historial" cols="62" rows="6"></textarea>
         </div>
         <div class="slot-container">
             <div class="button-div">
