Changed the font style, used a plain color for the background. Planning on adding more features and technologies in the near future.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="insert-monedas">
-            <input value="undefined" type="number" min="0" maxlength="6" id="input-coins" placeholder="Insert Coin">
+            <input value="undefined" type="number" min="0" maxlength="6" id="input-coins">
         </div>
         <div class=slot-container-1>
             <div class="img-frutas"><img id="slot-1" src="/img/Manzana.png" alt=""></div>
